# language-engine

./: .gitignore  .gitmodules  ChangeLog.md  ETLsteps.md  HFrameNet.cabal  HWordNet.cabal  LICENSE  NomBank.cabal  OntoNotes.cabal  PropBank.cabal  README.md  VerbNet.cabal  a  build.sh  cabal  cabal.project  config.json  config.json.bill  config.json.mark  config_global.json  default.nix  example.txt  graph-algorithms.cabal  graph.cabal  lexicon-builder.cabal  lexicon.cabal  multi-word-tagger.cabal  nlp-types.cabal  ontonotes-correction.patch  release.nix  semantic-role-labeler.cabal  semantic-types.cabal  shell-SRL.nix  shell-wiki.nix  shell.nix  syntactic-analysis.cabal  test.hs  time-tagger.cabal  wiki-ner.cabal
HFrameNet/: ChangeLog.md  HFrameNet.cabal  default.nix  shell.nix
HFrameNet/src/: FrameNet.hs
HFrameNet/test/: frame.hs
HWordNet/: HWordNet.cabal
HWordNet/app/: graph.hs  query.hs  serialize.hs
OntoNotes/: OntoNotes.cabal  README.md
OntoNotes/src/: OntoNotes.hs
OntoNotes/trash/: ArgTable.hs  FrameNet.hs
PropBank/: PropBank.cabal  shell.nix
PropBank/app/: corpus.hs
VerbNet/: ChangeLog.md  VerbNet.cabal  default.nix
VerbNet/src/: VerbNet.hs
VerbNet/test/: semlink.hs
app/: OntoNotesFrameNet.hs  SRL.hs  analyze.hs  argument.hs  comparePennTree.hs  convert-rolemap.hs  corpus.hs  dependency.hs  entityLinking.hs  feature.hs  fnquery.hs  graph.hs  idiom.hs  ner.hs  nodeFilter.hs  parse.hs  propbank-verbnet.hs  query.hs  range.hs  role-mapping-utility.hs  search-company.hs  sense-example-parse-batch.hs  sense-inventory.hs  serialize.hs  show-role-map.hs  showsense.hs  ssquery.hs  statistics.hs  training.hs  verb-subcat-propbank-stat.hs  verb_subcat_propbank_stat.hs  voice.hs  yagoBinaryIO.hs
app/Common/: Load.hs  Type.hs
data/: article.amazon_nike.ptb  article.china_trump.ptb  article.health_bill.ner  article.health_bill.ptb  iphone.ner
fasttext/: default.nix  fastTextGen.hs  gen.nix  testFastText.hs  wrapper.cc
graph-algorithms/: README.md  default.nix  graph-algorithms.cabal
graph-algorithms/src/: Graph.hs
lexicon/: ChangeLog.md  default.nix  lexicon.cabal  shell.nix
lexicon-builder/: ChangeLog.md  config.json.bill  config.json.mark  default.nix  lexicon-builder.cabal  shell.nix
lexicon-builder/app/: role-mapping-utility.hs  sense-inventory.hs  verb-subcat-propbank-stat.hs
lexicon-builder/oldapp/: showsense.hs  statistics.hs
lexicon/app/: rolemap-subcat-merge.hs
lexicon/src/: Lexicon.hs
lib/TimeTagger/: TemporalExpression.hs
multi-word-tagger/: multi-word-tagger.cabal  shell.nix
multi-word-tagger/src/: MWE.hs
nlp-types/: ChangeLog.md  default.nix  nlp-types.cabal  shell.nix
nlp-types/test/: attrib.hs  range.hs  serialize.hs  test.hs
oldapp/: argument.hs
scripts/: WikipediaETL.md  gen_data.sh  get_jel_codes.py  get_wikipedia_tables.py  wikidata_queries.sh
scripts/HFrameNet/: frameelement.hs
scripts/PropBank/: query.hs  test-adjust-index.hs  test-match-arg-nodes.hs
scripts/VerbNet/: verbnet.hs
scripts/fasttext/: testFastText.hs
scripts/lexicon-builder/: vos-parser.hs
scripts/multi-word-tagger/: search-idiom.hs
scripts/wiki-ner/: ner.hs  yagoBinaryIO.hs
semantic-role-labeler/: ChangeLog.md  README.md  semantic-role-labeler.cabal  shell.nix
semantic-role-labeler/app/: analyze.hs  dependency.hs  parseCoNLL.hs  testgraph.hs
semantic-role-labeler/src/: SVM.hs
semantic-role-labeler/test/: good_cases.txt  problematic_sentence.txt  svm-train.hs  test-meaning-graph.hs  test-performance.hs  verb.hs
semantic-role-labeler/trash/: Feature.hs  Train.hs  WikiEL.hs
semantic-types/: ChangeLog.md  semantic-types.cabal
semantic-types/src/NLP/Semantics/: Type.hs
src/: HFrameNet.hs  HWordNet.hs  MWE.hs  NER.hs  NomBank.hs  PropBank.hs  SRL.hs  SVM.hs  VerbNet.hs  WikiEL.hs  WordNet.hs
src/Data/: Attribute.hs  Bitree.hs  BitreeZipper.hs  ListZipper.hs  Range.hs
src/FrameNet/: Parse.hs
src/Graph/: ETL.hs  Path.hs
src/HFrameNet/: Parse.hs  Query.hs  Type.hs  Util.hs
src/Lexicon/: Data.hs  Format.hs  Merge.hs  Query.hs  Type.hs
src/MWE/: Company.hs  Idiom.hs  NamedEntity.hs  Util.hs
src/NER/: Load.hs  Type.hs
src/NLP/: Syntax.hs
src/NomBank/: Parser.hs  Type.hs
src/OntoNotes/: Format.hs
src/PropBank/: Format.hs  Match.hs  Parser.hs  Query.hs  Type.hs  Util.hs
src/SRL/: Analyze.hs  Feature.hs  Format.hs  IdentifyVoice.hs  Init.hs  Match.hs  PropBankMatch.hs  Statistics.hs  Train.hs  Type.hs  Util.hs  Vectorize.hs  VoiceIdentify.hs
src/Text/: TaggedText.hs
src/VerbNet/: Type.hs
src/WikiEL/: Convert.hs  CoreNLP.hs  EntityDisambiguation.hs  EntityLinking.hs  EntityMentionPruning.hs  Graph.hs  Investopedia.hs  Misc.hs  NamedEntity.hs  Run.hs  Type.hs  WikiEntity.hs  WikiEntityClass.hs  WikiEntityTagger.hs  WikiNamedEntityTagger.hs  WikiNewNET.hs
src/WordNet/: Format.hs  Query.hs  Type.hs
syntactic-analysis/: ChangeLog.md  default.nix  shell.nix  syntactic-analysis.cabal
syntactic-analysis/test/: test-syntax-property.hs
test/: Type.hs  attrib.hs  corenlp_entity.hs  frame.hs  frameelement.hs  good_cases.txt  lexunit.hs  lexunit_dump.hs  mapping.hs  named_entity_tagger.hs  parse.hs  problematic_sentence.txt  profiling.hs  semlink.hs  sense.hs  sense_inventory.hs  strange_article.txt  stub.c  svm-train.hs  test-adjust-index.hs  test-clause.hs  test-complement-phrase.hs  test-gen.hs  test-match-arg-nodes.hs  test-meaning-graph.hs  test-performance.hs  test-syntax-property.hs  test-verb-property-2.hs  test-verb-property.hs  test.hs  testAll.hs  testApp.hs  test_onfn_mapping.hs  test_verb_property.hs  trace-analysis.hs  verb.hs  verbnet.hs  voice.hs  wiki_entity_tagger.hs  zipper.hs
test/Test/: Clause.hs  Common.hs  CoreNLPEntity.hs  DataFile.hs  GraphOps.hs  NamedEntityTagger.hs  Noun.hs  RDFDumpETL.hs  Trace.hs  VerbComplement.hs  VerbProperty.hs  (+1 more)
time-tagger/: ChangeLog.md  default.nix  time-tagger.cabal
trash/: Feature.hs  Verb.hs  test-clause.hs  test-verb-property.hs
wiki-ner/: ETLsteps.md  shell.nix  wiki-ner.cabal
xxhash-ffi-renamed/: xxhash-ffi-renamed.cabal
(+363 files in other folders)
