name:                PropBank
version:             0.1.0.0
synopsis:            PropBank/NomBank parser and query engine
description:         PropBank/NomBank parser and query engine
-- license:             
license-file:        LICENSE
author:              UpHere, Inc.
maintainer:          ianwookim@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
                       PropBank
                       PropBank.Parser.Frame
                       PropBank.Parser.Prop
                       PropBank.Query
                       PropBank.Type
  -- other-modules:       
  -- other-extensions:
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  build-depends:       base,
                       attoparsec,
                       directory,
                       filepath,
                       lens,
                       taggy-lens,
                       text,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

Executable query
  Main-is:              query.hs
  hs-source-dirs:       app
  default-language:    Haskell2010
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:
  other-modules:       
  
  build-depends:        base,
                        --
                        filepath,
                        haskeline,
                        lens,
                        monad-loops,
                        optparse-applicative,
                        text,
                        unordered-containers,
                        yayaml,
                        --
                        PropBank

Executable corpus
  Main-is:              corpus.hs
  hs-source-dirs:       app
  default-language:    Haskell2010
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:
  other-modules:       
  
  build-depends:        base,
                        --
                        filepath,
                        haskeline,
                        lens,
                        monad-loops,
                        optparse-applicative,
                        text,
                        unordered-containers,
                        yayaml,
                        --
                        PropBank
