name:                PropBank
version:             0.1.0.0
synopsis:            PropBank/NomBank parser and query engine
description:         PropBank/NomBank parser and query engine
-- license:             
license-file:        LICENSE
author:              UpHere, Inc.
maintainer:          ianwookim@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
                   PropBank
                   PropBank.Format
                   PropBank.Match
                   PropBank.Parser.Frame
                   PropBank.Parser.Prop
                   PropBank.Query
                   PropBank.Type
                   PropBank.Type.Frame
                   PropBank.Type.Match
                   PropBank.Type.Prop
                   PropBank.Util
  -- other-modules:       
  -- other-extensions:
  ghc-options:     -Wall -O2
                   -threaded
                   -funbox-strict-fields
                   -fno-warn-unused-do-bind
                   -fno-warn-orphans
                        

  ghc-prof-options:     -auto-all
  build-depends:       base,
                       attoparsec,
                       bifunctors,
                       directory,
                       discrimination,
                       filepath,
                       lens,
                       monad-loops,
                       taggy-lens,
                       text,
                       transformers,
                       unordered-containers,
                       yayaml,
                       --
                       nlp-types,
                       --
                       split

                       
  hs-source-dirs:      src
  default-language:    Haskell2010

Executable query
  Main-is:              query.hs
  hs-source-dirs:       app
  default-language:    Haskell2010
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind
                        -fno-warn-orphans

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:
  other-modules:       
  
  build-depends:        base,
                        --
                        haskeline,
                        monad-loops,
                        optparse-applicative,
                        text,
                        --
                        PropBank

Executable corpus
  Main-is:              corpus.hs
  hs-source-dirs:       app
  default-language:    Haskell2010
  ghc-options:          -Wall -O2
                        -threaded
                        -funbox-strict-fields
                        -fno-warn-unused-do-bind
                        -fno-warn-orphans

  ghc-prof-options:     -auto-all
  extra-libraries:     
  c-sources:
  other-modules:       
  
  build-depends:        base,
                        --
                        attoparsec,
                        containers,
                        discrimination,
                        filepath,
                        lens,
                        optparse-applicative,
                        split,
                        text,
                        unordered-containers,
                        --
                        nlp-types,
                        --
                        PropBank
